Better Handling for Annotation, Exception and Attack component (#20)
* [skip ci] chore: remove `/system/` ignore folder

* feat(Factory): use `HealthDeath` component instead of manual set death on `Attack`

* refactor: Change `@SuitableFor` become a run-time function

Renamed several classes and updated their package paths to improve organization (e.g., moved `AnchorPoint`, `EntityType`, and `CanExecute` to `typing.enums` and `typing.interfaces`). Updated import statements accordingly to reflect these changes.

* feat(exception): introduce BounceverseException for better error handling

Replace RuntimeException with BounceverseException in Bounceverse.java to provide more context on errors. The new exception class allows for additional details to be passed, enhancing error reporting.