@@ -5,11 +5,15 @@ plugins {
 	id 'com.diffplug.spotless' version "8.0.0"
 }
 
-group = 'com.github.codestorm'
-version = '1.0.0'
-
 repositories {
 	mavenCentral()
+}
+
+java {
+	toolchain {
+		languageVersion = JavaLanguageVersion.of(24)
+		vendor.set(JvmVendorSpec.ADOPTIUM)
+	}
 }
 
 dependencies {
@@ -70,25 +74,5 @@ spotless {
 	java {
 		googleJavaFormat().aosp().reflowLongStrings()
 		formatAnnotations()
-	}
-}
-
-// enable flexible constructors (preview feature)
-tasks.withType(JavaCompile).configureEach {
-	options.compilerArgs += "--enable-preview"
-}
-
-tasks.withType(Test).configureEach {
-	jvmArgs += "--enable-preview"
-}
-
-tasks.withType(JavaExec).configureEach {
-	jvmArgs += "--enable-preview"
-}
-
-java {
-	toolchain {
-		languageVersion = JavaLanguageVersion.of(24)
-		vendor.set(JvmVendorSpec.ADOPTIUM)
 	}
 }
